fix(docs): hid overflow in HTML examples (#3010)

--- a/packages/theme-patternfly-org/components/example/example.css
+++ b/packages/theme-patternfly-org/components/example/example.css
@@ -34,6 +34,10 @@
   transition: width .2s ease-in-out;
 }
 
+.ws-preview-html {
+  overflow: hidden;
+}
+
 .ws-editor {
   font-size: 16px;
 }
